--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@
     font-family: shadows, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.icon {
-    height: 36px;
-    width: 36px;
-    fill: var(--dirty-white);
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 h1 {
@@ -39,4 +40,22 @@ header {
     justify-content: center;
     padding: 16px;
     background-color: var(--dark-black);
+}
+
+footer {
+    padding: 18px;
+    background-color: #323232;
+    text-align: center;
+}
+
+footer p {
+    color: var(--dirty-white);
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.icon {
+    height: 36px;
+    width: 36px;
+    fill: var(--dirty-white);
 }
