--- a/style.css
+++ b/style.css
@@ -10,10 +10,16 @@
     --dark-grey: #323232;
     --dark-turqoise: #0D7377;
     --turqoise: #14FFEC;
+    --grey-turqoise: #29d6c8;
     --dirty-white: #EDEDED;
     --neon-pink: #FF2E63;
     --grey: #424242;
     --light-red: #CF6679;
+    --size-16: 16px;
+    --size-18: 18px;
+    --size-24: 24px;
+    --size-36: 36px;
+    --size-300: 300px;
 }
 
 * {
@@ -30,7 +36,7 @@ body {
 }
 
 h1 {
-    margin: 0 16px;
+    margin: 0 var(--size-16);
     color: var(--dirty-white);
 }
 
@@ -38,24 +44,82 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 16px;
+    padding: var(--size-16);
     background-color: var(--dark-black);
 }
 
 footer {
-    padding: 18px;
+    padding: var(--size-18);
     background-color: #323232;
     text-align: center;
 }
 
 footer p {
     color: var(--dirty-white);
-    font-size: 18px;
+    font-size: var(--size-18);
     font-weight: bold;
 }
 
+dialog {
+    margin: auto;
+}
+
+.mode-dialog[open] {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: var(--size-300);
+    width: var(--size-300);
+    border-radius: 25% 10%;
+}
+
+.mode-dialog p {
+    font-size: var(--size-24);
+    font-weight: bold;
+}
+
+.mode-dialog form {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.mode-dialog form button:nth-child(n) {
+    border: 2px solid var(--dark-turqoise);
+    background-color: var(--turqoise);
+    padding: var(--size-16);
+    font-weight: 600;
+    width: 40%;
+}
+
+.mode-dialog form button:nth-child(1) {
+    border-radius: 10% 25%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.mode-dialog form button:nth-child(2) {
+    border-radius: 25% 10%;
+}
+
+.mode-dialog form button:nth-child(n):hover {
+    background-color: var(--grey-turqoise);
+    transition: 0.2s;
+}
+
+.robo {
+    height: var(--size-16);
+    width: var(--size-16);
+}
+
 .icon {
-    height: 36px;
-    width: 36px;
+    height: var(--size-36);
+    width: var(--size-36);
     fill: var(--dirty-white);
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(2px);
 }
