--- a/style.css
+++ b/style.css
@@ -75,6 +75,48 @@ dialog[open] {
     align-items: center;
 }
 
+main {
+    flex-grow: 1;
+    background-color: var(--dark-turqoise);
+    display: flex;
+}
+
+.display {
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 1;
+}
+
+.display .score-board {
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.display .score-board div {
+    height: 30%;
+    border: 2px solid var(--dark-black);
+    background-color: var(--dirty-white);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.display .score-board.left div {
+    border-radius: 0 25%;
+}
+
+.display .score-board.right div {
+    border-radius: 25% 0;
+}
+
+.display .center {
+    width: 40%;
+    border: 2px solid black;
+}
+
 .mode-dialog[open] {
     height: var(--size-300);
     width: var(--size-300);
@@ -82,7 +124,8 @@ dialog[open] {
 }
 
 .mode-dialog p,
-.two-pl-dialog p {
+.two-pl-dialog p,
+.display .score-board p {
     font-size: var(--size-24);
     font-weight: bold;
 }
